test/corpus/L1/positive/array-nested.st
"---
kind: positive
section: array.nested
note: literal array containing a nested literal array
---"
#(1 #(2 3))
