test/corpus/L1/negative/unclosed-dynarray.st
"---
kind: negative
section: error.unclosed-dynarray
codes: E_UNCLOSED_DYNARRAY
note: dynamic array missing closing brace
---"
{1. 2
